--- a/index.html
+++ b/index.html
@@ -158,18 +158,18 @@
     </div>
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
-        <div class="panel-heading">BITMAX EMPRESARIAL 2.30M</div>
+        <div class="panel-heading">BITMAX EMPRESARIAL 2.31M</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Executáveis Atualização 31.10.2019+IBexpert</div>
-        <a href="https://www.mediafire.com/file/wc9a3lhyw5nmvki/Atualiza%E7%E3o_Empresarial__31.10.2019.rar/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <div class="panel-footer">Executáveis Atualização 13.01.2020</div>
+        <a href="https://www.mediafire.com/file/1rx7flouo6pqax8/Atualiza%E7%E3o_2.31M_13.01.2020.rar/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
-        <div class="panel-heading">BITMAX EMPRESARIAL 2.30M BETA</div>
+        <div class="panel-heading">BITMAX EMPRESARIAL 2.30M</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Executáveis Atualização 18.12.2019</div>
-        <a href="http://www.mediafire.com/file/wt9kwt0i8r3qn9j/Atualiza%25C3%25A7%25C3%25A3o_Empresarial_18.12.2019.rar/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <div class="panel-footer">Executáveis Atualização 31.10.2019+IBexpert</div>
+        <a href="https://www.mediafire.com/file/wc9a3lhyw5nmvki/Atualiza%E7%E3o_Empresarial__31.10.2019.rar/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
   </div>
