Inserção da tabela ibpt

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 							</tr>
 							<tr>
 								<td class="column1">3</td>
-								<td class="column2">BITMAX EMPRESARIAL</td>
-								<td class="column3">---</td>
-								<td class="column4">---</td>
+								<td class="column2">TABELA IBPT</td>
+								<td class="column3">20.1B</td>
+								<td class="column4">10.07.2020</td>
 								<td class="column5">Atualização</td>
-								<td class="column6"><a href="" target="_blank">Baixar</a></td>
+								<td class="column6"><a href="http://www.mediafire.com/file/anju5ofj8enxxgg/Atualiza%25C3%25A7%25C3%25A3o_IPBT_20.1.B.sql/file" target="_blank">Baixar</a></td>
 							</tr>														
 						</tbody>
 					</table>
