--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
 								<td class="column1">1</td>
 								<td class="column2">ACESSOS REMOTOS</td>
 								<td class="column3">---</td>
-								<td class="column4">---</td>
-								<td class="column5">---</td>
-								<td class="column6"><a href="https://www.mediafire.com/file/pdldzgixlr9j00j/Acesso_Remotos.rar/file" target="_blank">Baixar</a></td>
+								<td class="column4">31.03.2021</td>
+								<td class="column5">Ferramentas</td>
+								<td class="column6"><a href="https://www.mediafire.com/file/ubgwfq741nvn3ef/Acessos_Remotos.rar/file" target="_blank">Baixar</a></td>
 							</tr>
 							<tr>
 								<td class="column1">2</td>
 								<td class="column2">IBEXPERT</td>
 								<td class="column3">---</td>
 								<td class="column4">---</td>
-								<td class="column5">---</td>
+								<td class="column5">Ferramentas</td>
 								<td class="column6"><a href="http://www.mediafire.com/file/c496d5yden1fb8r/ibexpert.exe/file" target="_blank">Baixar</a></td>
 							</tr>
 							<tr>
@@ -99,8 +99,32 @@
 								<td class="column2">FIREBIRD</td>
 								<td class="column3">Firebird 2.0.7</td>
 								<td class="column4">---</td>
-								<td class="column5">---</td>
+								<td class="column5">Ferramentas</td>
 								<td class="column6"><a href="http://www.mediafire.com/file/ciz8kstm4w3xv74/Instalador_Firebird.exe/file" target="_blank">Baixar</a></td>
+							</tr>
+							<tr>
+								<td class="column1">4</td>
+								<td class="column2">ROTINA BACKUP</td>
+								<td class="column3">4.00</td>
+								<td class="column4">31.03.2021</td>
+								<td class="column5">Ferramentas</td>
+								<td class="column6"><a href="https://www.mediafire.com/file/goi4ps9fwe5bfdl/Backup.rar/file" target="_blank">Baixar</a></td>
+							</tr>
+							<tr>
+								<td class="column1">5</td>
+								<td class="column2">TESTAR EMAIL</td>
+								<td class="column3">1.00</td>
+								<td class="column4">31.03.2021</td>
+								<td class="column5">Ferramentas</td>
+								<td class="column6"><a href="https://www.mediafire.com/file/nf5y992z4jcm553/TesteEmailSenhaDoEmailSuporteParaAbrir.rar/file" target="_blank">Baixar</a></td>
+							</tr>
+							<tr>
+								<td class="column1">5</td>
+								<td class="column2">UTILITÁRIO</td>
+								<td class="column3">1.00</td>
+								<td class="column4">31.03.2021</td>
+								<td class="column5">Ferramentas</td>
+								<td class="column6"><a href="https://www.mediafire.com/file/trmiu15hwgkowuf/Utilitario.rar/file" target="_blank">Baixar</a></td>
 							</tr>
 														
 						</tbody>
