--- a/index.html
+++ b/index.html
@@ -50,13 +50,21 @@
 							<tr>
 								<td class="column1">2</td>
 								<td class="column2">BITMAX EMPRESARIAL</td>
-								<td class="column3">V. 2103 beta</td>
+								<td class="column3">V. 2103</td>
 								<td class="column4">08.04.2021</td>
 								<td class="column5">Atualização</td>
 								<td class="column6"><a href="https://www.mediafire.com/file/9tmcz14zz2ren3b/Atualiza%25C3%25A7%25C3%25A3o_Empresarial_08.04.2021.rar/file" target="_blank">Baixar</a></td>
 							</tr>
 							<tr>
 								<td class="column1">3</td>
+								<td class="column2">BITMAX EMPRESARIAL</td>
+								<td class="column3">V. 2103 beta</td>
+								<td class="column4">30.04.2021</td>
+								<td class="column5">Atualização</td>
+								<td class="column6"><a href="https://www.mediafire.com/file/58sfno1vwija018/Atualiza%25C3%25A7%25C3%25A3o_30.04.2021.rar/file" target="_blank">Baixar</a></td>
+							</tr>
+							<tr>
+								<td class="column1">4</td>
 								<td class="column2">TABELA IBPT</td>
 								<td class="column3">20.1B</td>
 								<td class="column4">10.07.2020</td>
