--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<td class="column3">V. 2003</td>
 								<td class="column4">16.03.2020</td>
 								<td class="column5">Instalador</td>
-								<td class="column6"><a href="http://www.mediafire.com/file/7ki84nqqcfcprvp/BitmaxInstall_Empresarial_V._2003.rar/file" target="_blank">Baixar</a></td>
+								<td class="column6"><a href="https://www.mediafire.com/file/ffcznpbh1xtaen4/BitmaxInstall_Empresarial.rar/file" target="_blank">Baixar</a></td>
 							</tr>
 							<tr>
 								<td class="column1">2</td>
@@ -58,10 +58,10 @@
 							<tr>
 								<td class="column1">3</td>
 								<td class="column2">BITMAX EMPRESARIAL</td>
-								<td class="column3">V. 2103 beta</td>
-								<td class="column4">30.04.2021</td>
+								<td class="column3">V. 2105</td>
+								<td class="column4">02.06.2021</td>
 								<td class="column5">Atualização</td>
-								<td class="column6"><a href="https://www.mediafire.com/file/58sfno1vwija018/Atualiza%25C3%25A7%25C3%25A3o_30.04.2021.rar/file" target="_blank">Baixar</a></td>
+								<td class="column6"><a href="https://www.mediafire.com/file/gbgpfwq43vwj7wf/Atualiza%25C3%25A7%25C3%25A3o_empresarial_02.06.2021.rar/file" target="_blank">Baixar</a></td>
 							</tr>
 							<tr>
 								<td class="column1">4</td>
