--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 								<td class="column1">2</td>
 								<td class="column2">BITMAX EMPRESARIAL</td>
 								<td class="column3">V. 2105</td>
-								<td class="column4">27.07.2021</td>
+								<td class="column4">05.10.2021</td>
 								<td class="column5">Atualização</td>
-								<td class="column6"><a href="https://www.mediafire.com/file/zqofckg05ugvja3/Atualiza%25C3%25A7%25C3%25A3o_empresarial_27.07.2021.rar/file" target="_blank">Baixar</a></td>
+								<td class="column6"><a href="https://www.mediafire.com/file/0gajxj3n486dyms/Atualiza%25C3%25A7%25C3%25A3o_empresarial_05.10.2021.rar/file">Baixar</a></td>
 							</tr>
 							<tr>
 								<td class="column1">3</td>
@@ -105,10 +105,10 @@
 							<tr>
 								<td class="column1">4</td>
 								<td class="column2">ROTINA BACKUP</td>
-								<td class="column3">7.00</td>
-								<td class="column4">27.08.2021</td>
+								<td class="column3">8.00</td>
+								<td class="column4">07.10.2021</td>
 								<td class="column5">Ferramentas</td>
-								<td class="column6"><a href="https://www.mediafire.com/file/3ar6vwig77qhtee/Backup.rar/file" target="_blank">Baixar</a></td>
+								<td class="column6"><a href="https://www.mediafire.com/file/p5aauue0ieqja8l/Backup.rar/file" target="_blank">Baixar</a></td>
 							</tr>
 							<tr>
 								<td class="column1">5</td>
