--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								<td class="column3">---</td>
 								<td class="column4">---</td>
 								<td class="column5">TUTORIAL</td>
-								<td class="column6"><a href="http://www.mediafire.com/file/o6a3nrzoea8irfw/tutorial_venda_r%25C3%25A1pida.pdf/file" target="_blank">Baixar</a></td>
+								<td class="column6"><a href="https://www.mediafire.com/file/1h36yb9cqrhliyc/Venda_r%25C3%25A1pida.pdf/file" target="_blank">Baixar</a></td>
 							</tr>
 							<tr>
 								<td class="column1">3</td>
@@ -164,7 +164,7 @@
 								<td class="column3">---</td>
 								<td class="column4">---</td>
 								<td class="column5">TUTORIAL</td>
-								<td class="column6"><a href="http://www.mediafire.com/file/ayn78t6h8z7404c/Entrada_por_XML.pdf/file" target="_blank">Baixar</a></td>
+								<td class="column6"><a href="https://www.mediafire.com/file/7s7appwmovg50fw/Entrada_por_XML.pdf/file" target="_blank">Baixar</a></td>
 							</tr>
 							<tr>
 								<td class="column1">4</td>
@@ -172,7 +172,7 @@
 								<td class="column3">---</td>
 								<td class="column4">---</td>
 								<td class="column5">TUTORIAL</td>
-								<td class="column6"><a href="http://www.mediafire.com/file/vnjrospoz2q7snr/tabela_de_CFOP.pdf/file" target="_blank">Baixar</a></td>
+								<td class="column6"><a href="https://www.mediafire.com/file/c4mrz6tc0a8c11i/tabela_de_CFOP.pdf/file" target="_blank">Baixar</a></td>
 							</tr>
 							<tr>
 								<td class="column1">5</td>
