Atualização de ibpt
mudança de ibpt

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 							<tr>
 								<td class="column1">3</td>
 								<td class="column2">TABELA IBPT</td>
-								<td class="column3">20.1B</td>
-								<td class="column4">10.07.2020</td>
+								<td class="column3">22.1A</td>
+								<td class="column4">31.01.2022</td>
 								<td class="column5">Atualização</td>
-								<td class="column6"><a href="http://www.mediafire.com/file/anju5ofj8enxxgg/Atualiza%25C3%25A7%25C3%25A3o_IPBT_20.1.B.sql/file" target="_blank">Baixar</a></td>
+								<td class="column6"><a href="https://www.mediafire.com/file/0aii4nv7j4ouayj/ATUALIZA%25C3%2587%25C3%2583O_IBPT_22.1A_VIGENCIA_31.01.2022_.sql/file" target="_blank">Baixar</a></td>
 							</tr>														
 						</tbody>
 					</table>
