Acrescentado versão beta na linha 4

--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
 								<td class="column4">31.01.2022</td>
 								<td class="column5">Atualização</td>
 								<td class="column6"><a href="https://www.mediafire.com/file/0aii4nv7j4ouayj/ATUALIZA%25C3%2587%25C3%2583O_IBPT_22.1A_VIGENCIA_31.01.2022_.sql/file" target="_blank">Baixar</a></td>
-							</tr>														
+							</tr>		
+							<tr>
+								<td class="column1">4</td>
+								<td class="column2">BITMAX EMPRESARIAL</td>
+								<td class="column3">V. 2201</td>
+								<td class="column4">06.01.2022</td>
+								<td class="column5">BETA</td>
+								<td class="column6"><a href="https://www.mediafire.com/file/aoq0scybap9sons/Atualiza%25C3%25A7%25C3%25A3o_Empresarial_06.01.2022.rar/file" target="_blank">Baixar</a></td>
+							</tr>
 						</tbody>
 					</table>
 					<br><br>
