--- a/index.html
+++ b/index.html
@@ -213,5 +213,11 @@
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
 
+	<script>
+		alert("Nova versão Disponível");
+		alert("Configure a rotina de backup no cliente");
+		
+	</script>
+
 </body>
 </html>
