--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 							<tr>
 								<td class="column1">3</td>
 								<td class="column2">TABELA IBPT</td>
-								<td class="column3">22.1A</td>
+								<td class="column3">22.1B</td>
 								<td class="column4">31.01.2022</td>
 								<td class="column5">Atualização</td>
-								<td class="column6"><a href="https://www.mediafire.com/file/0aii4nv7j4ouayj/ATUALIZA%25C3%2587%25C3%2583O_IBPT_22.1A_VIGENCIA_31.01.2022_.sql/file" target="_blank">Baixar</a></td>
+								<td class="column6"><a href="https://www.mediafire.com/file/duikr2p48kf35t0/ATUALIZA%25C3%2587%25C3%2583O_IBPT_22.1B_VIGENCIA_28.02.2022.sql/file" target="_blank">Baixar</a></td>
 							</tr>		
 							<tr>
 								<td class="column1">4</td>
