--- a/index.html
+++ b/index.html
@@ -1,233 +1,55 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!doctype html>
+<html>
 
 <head>
-	<title>Área de Suporte</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<!--===============================================================================================-->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Download</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/flexbox.css">
 </head>
 
 <body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js">
+  </script>
+  <script src="../js/index.js"></script>
 
-	<div class="limiter">
-		<div class="container-table100">
-			<div class="wrap-table100">
-				<div class="table100">
-					<table>
-						<thead>
-							<tr class="table100-head">
-								<th class="column1">ID</th>
-								<th class="column2">Nome</th>
-								<th class="column3">Versão</th>
-								<th class="column4">Data</th>
-								<th class="column5">Tipo</th>
-								<th class="column6">Download</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td class="column1">1</td>
-								<td class="column2">BITMAX EMPRESARIAL</td>
-								<td class="column3">V. 2003</td>
-								<td class="column4">16.03.2020</td>
-								<td class="column5">Instalador</td>
-								<td class="column6"><a
-										href="https://www.mediafire.com/file/ffcznpbh1xtaen4/BitmaxInstall_Empresarial.rar/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">2</td>
-								<td class="column2">BITMAX EMPRESARIAL</td>
-								<td class="column3">V. 2105</td>
-								<td class="column4">05.10.2021</td>
-								<td class="column5">Atualização</td>
-								<td class="column6"><a
-										href="https://www.mediafire.com/file/anfezhw0kx359vn/Atualiza%25C3%25A7%25C3%25A3o_empresarial_05.10.2021.rar/file">Baixar</a>
-								</td>
-							</tr>
-							<tr>
-								<td class="column1">3</td>
-								<td class="column2">TABELA IBPT</td>
-								<td class="column3">22.1B</td>
-								<td class="column4">31.01.2022</td>
-								<td class="column5">Atualização</td>
-								<td class="column6"><a
-										href="https://www.mediafire.com/file/duikr2p48kf35t0/ATUALIZA%25C3%2587%25C3%2583O_IBPT_22.1B_VIGENCIA_28.02.2022.sql/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">4</td>
-								<td class="column2">BITMAX EMPRESARIAL</td>
-								<td class="column3">V. 2201</td>
-								<td class="column4">16.03.2022</td>
-								<td class="column5">BETA</td>
-								<td class="column6"><a
-										href="https://www.mediafire.com/file/9xrkwm9m8a1lht2/Atualiza%25C3%25A7%25C3%25A3o_Empresarial_16.03.2022.rar/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-						</tbody>
-					</table>
-					<br><br>
-					<table>
-						<thead>
-							<tr class="table100-head">
-								<th class="column1">ID</th>
-								<th class="column2">Nome</th>
-								<th class="column3">Versão</th>
-								<th class="column4">Data</th>
-								<th class="column5">Tipo</th>
-								<th class="column6">Download</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td class="column1">1</td>
-								<td class="column2">ACESSOS REMOTOS</td>
-								<td class="column3">---</td>
-								<td class="column4">31.03.2021</td>
-								<td class="column5">Ferramentas</td>
-								<td class="column6"><a
-										href="https://www.mediafire.com/file/ubgwfq741nvn3ef/Acessos_Remotos.rar/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">2</td>
-								<td class="column2">IBEXPERT</td>
-								<td class="column3">---</td>
-								<td class="column4">---</td>
-								<td class="column5">Ferramentas</td>
-								<td class="column6"><a
-										href="http://www.mediafire.com/file/c496d5yden1fb8r/ibexpert.exe/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">3</td>
-								<td class="column2">FIREBIRD</td>
-								<td class="column3">Firebird 2.0.7</td>
-								<td class="column4">---</td>
-								<td class="column5">Ferramentas</td>
-								<td class="column6"><a
-										href="http://www.mediafire.com/file/ciz8kstm4w3xv74/Instalador_Firebird.exe/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">4</td>
-								<td class="column2">ROTINA BACKUP</td>
-								<td class="column3">8.00</td>
-								<td class="column4">07.10.2021</td>
-								<td class="column5">Ferramentas</td>
-								<td class="column6"><a
-										href="https://www.mediafire.com/file/p5aauue0ieqja8l/Backup.rar/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">5</td>
-								<td class="column2">TESTAR EMAIL</td>
-								<td class="column3">1.00</td>
-								<td class="column4">31.03.2021</td>
-								<td class="column5">Ferramentas</td>
-								<td class="column6"><a
-										href="https://www.mediafire.com/file/nf5y992z4jcm553/TesteEmailSenhaDoEmailSuporteParaAbrir.rar/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">5</td>
-								<td class="column2">UTILITÁRIO</td>
-								<td class="column3">1.00</td>
-								<td class="column4">31.03.2021</td>
-								<td class="column5">Ferramentas</td>
-								<td class="column6"><a
-										href="https://www.mediafire.com/file/trmiu15hwgkowuf/Utilitario.rar/file"
-										target="_blank">Baixar</a></td>
-							</tr>
+  <header class="cabecalhoPrincipal">
+    <div class="container">
+      <h1 class="cabecalhoPrincipal-titulo">
+        <a href="#">Ferramentas de Suporte</a>
+      </h1>
 
-						</tbody>
-					</table>
-					<br><br>
-					<table>
-						<thead>
-							<tr class="table100-head">
-								<th class="column1">ID</th>
-								<th class="column2">Nome</th>
-								<th class="column3">Versão</th>
-								<th class="column4">Data</th>
-								<th class="column5">Tipo</th>
-								<th class="column6">Download</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td class="column1">1</td>
-								<td class="column2">MANUAL COMPLETO</td>
-								<td class="column3">---</td>
-								<td class="column4">---</td>
-								<td class="column5">MANUAL</td>
-								<td class="column6"><a
-										href="http://www.mediafire.com/file/z7xyl73h53n4kub/Manual_Bitmax.chm/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">2</td>
-								<td class="column2">VENDA RÁPIDA</td>
-								<td class="column3">---</td>
-								<td class="column4">---</td>
-								<td class="column5">TUTORIAL</td>
-								<td class="column6"><a
-										href="https://www.mediafire.com/file/1h36yb9cqrhliyc/Venda_r%25C3%25A1pida.pdf/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">3</td>
-								<td class="column2">ENTRADA POR XML</td>
-								<td class="column3">---</td>
-								<td class="column4">---</td>
-								<td class="column5">TUTORIAL</td>
-								<td class="column6"><a
-										href="https://www.mediafire.com/file/7s7appwmovg50fw/Entrada_por_XML.pdf/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">4</td>
-								<td class="column2">TABELA DE CFOP</td>
-								<td class="column3">---</td>
-								<td class="column4">---</td>
-								<td class="column5">TUTORIAL</td>
-								<td class="column6"><a
-										href="https://www.mediafire.com/file/o7ay5j7wojk21vi/tabela_de_CFOP.pdf/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">5</td>
-								<td class="column2">CADASTRO DE PRODUTOS</td>
-								<td class="column3">---</td>
-								<td class="column4">---</td>
-								<td class="column5">TUTORIAL</td>
-								<td class="column6"><a
-										href="http://www.mediafire.com/file/1hx2k4z087drbed/tutorial_cadastro_produtos.pdf/file"
-										target="_blank">Baixar</a></td>
-							</tr>
-							<tr>
-								<td class="column1">6</td>
-								<td class="column2">TREINAMENTOS</td>
-								<td class="column3">---</td>
-								<td class="column4">---</td>
-								<td class="column5">VIDEOS</td>
-								<td class="column6"><a
-										href="pages\videos.html"
-										target="_blank">Baixar</a></td>
-							</tr>
+  </header>
 
-						</tbody>
-					</table>
-				</div>
-			</div>
-		</div>
-	</div>
+  <main class="conteudoPrincipal">
+    <div class="container">
+      <!-- <h2 class="subtitulo">Nossos cursos</h2> -->
+
+      <nav>
+        <ul class="conteudoPrincipal-cursos">
+          <li class="conteudoPrincipal-cursos-link instalador"><a href="https://download1512.mediafire.com/c3e506tzwumg/ffcznpbh1xtaen4/BitmaxInstall_Empresarial.rar" target="_blank">Instalador</a></li>
+          <li class="conteudoPrincipal-cursos-link update"><a href="https://download1498.mediafire.com/nbir07h37ckg/cl2tced2xt8mgs0/Atualiza%C3%A7%C3%A3o+Empresarial+05.05.2022.rar" target="_blank">Atualização</a></li>
+          <li class="conteudoPrincipal-cursos-link update2"><a href="#">Atualização Beta</a></li>
+          <li class="conteudoPrincipal-cursos-link table"><a href="files/IBPT.sql" target="_blank">Tabela IBPT</a></li>
+          <li class="conteudoPrincipal-cursos-link tools"><a href="files/exe/ibexpert.exe">IBExpert</a></li>
+          <li class="conteudoPrincipal-cursos-link database"><a href="files/exe/Instalador_Firebird.exe">Firebird</a></li>
+          <li class="conteudoPrincipal-cursos-link backup"><a href="files/Backup.rar">Rotina de Backup</a></li>
+          <li class="conteudoPrincipal-cursos-link manual"><a href="files/pdf/Manual Bitmax.chm">Manual Completo</a></li>
+          <li class="conteudoPrincipal-cursos-link manual2"><a href="files/pdf/Venda rápida.pdf">Venda Rápida</a></li>
+          <li class="conteudoPrincipal-cursos-link manual3"><a href="files/pdf/Entrada por XML.pdf">Entrada por XML</a></li>
+          <li class="conteudoPrincipal-cursos-link manual4"><a href="files/pdf/tabela de CFOP.pdf">Tabela de CFOP</a></li>
+          <li class="conteudoPrincipal-cursos-link manual5"><a href="files/pdf/tutorial cadastro produtos.pdf">Cadastro de Produtos</a></li>
+          <li class="conteudoPrincipal-cursos-link video"><a href="#">Videos</a></li>
+
+        </ul>
+      </nav>
+    </div>
+
+
+
+  </main>
 
 
 </body>
