--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
   </header>
 
   <main class="conteudoPrincipal">
+    <script>
+      function funcao1()
+      {
+      alert("Eu sou um alert!");
+      }
+      </script>
     <div class="container">
       <!-- <h2 class="subtitulo">Nossos cursos</h2> -->
 
@@ -31,22 +37,24 @@
         <ul class="conteudoPrincipal-cursos">
           <li class="conteudoPrincipal-cursos-link instalador"><a href="https://download1512.mediafire.com/c3e506tzwumg/ffcznpbh1xtaen4/BitmaxInstall_Empresarial.rar" target="_blank">Instalador</a></li>
           <li class="conteudoPrincipal-cursos-link update"><a href="https://download1498.mediafire.com/nbir07h37ckg/cl2tced2xt8mgs0/Atualiza%C3%A7%C3%A3o+Empresarial+05.05.2022.rar" target="_blank">Atualização 05.05.2022</a></li>
-          <li class="conteudoPrincipal-cursos-link update2"><a href="#">Atualização Beta</a></li>
+          <li class="conteudoPrincipal-cursos-link update2"><a href="javascript:alert('Nada por aqui')">Atualização Beta</a></li>
           <li class="conteudoPrincipal-cursos-link table"><a href="files/IBPT.sql" target="_blank">Tabela IBPT</a></li>
-          <li class="conteudoPrincipal-cursos-link tools"><a href="files/exe/ibexpert.exe">IBExpert</a></li>
-          <li class="conteudoPrincipal-cursos-link database"><a href="files/exe/Instalador_Firebird.exe">Firebird</a></li>
-          <li class="conteudoPrincipal-cursos-link backup"><a href="files/Backup.rar">Rotina de Backup</a></li>
-          <li class="conteudoPrincipal-cursos-link manual"><a href="files/pdf/Manual Bitmax.chm">Manual Completo</a></li>
-          <li class="conteudoPrincipal-cursos-link manual2"><a href="files/pdf/Venda rápida.pdf">Venda Rápida</a></li>
-          <li class="conteudoPrincipal-cursos-link manual3"><a href="files/pdf/Entrada por XML.pdf">Entrada por XML</a></li>
-          <li class="conteudoPrincipal-cursos-link manual4"><a href="files/pdf/tabela de CFOP.pdf">Tabela de CFOP</a></li>
-          <li class="conteudoPrincipal-cursos-link manual5"><a href="files/pdf/tutorial cadastro produtos.pdf">Cadastro de Produtos</a></li>
-          <li class="conteudoPrincipal-cursos-link video"><a href="#">Videos</a></li>
+          <li class="conteudoPrincipal-cursos-link tools"><a href="files/exe/ibexpert.exe"target="_blank">IBExpert</a></li>
+          <li class="conteudoPrincipal-cursos-link database"><a href="files/exe/Instalador_Firebird.exe" target="_blank">Firebird</a></li>
+          <li class="conteudoPrincipal-cursos-link backup"><a href="files/Backup.rar" target="_blank">Rotina de Backup</a></li>
+          <li class="conteudoPrincipal-cursos-link manual"><a href="files/pdf/Manual Bitmax.chm" target="_blank">Manual Completo</a></li>
+          <li class="conteudoPrincipal-cursos-link manual2"><a href="files/pdf/Venda rápida.pdf" target="_blank">Venda Rápida</a></li>
+          <li class="conteudoPrincipal-cursos-link manual3"><a href="files/pdf/Entrada por XML.pdf" target="_blank">Entrada por XML</a></li>
+          <li class="conteudoPrincipal-cursos-link manual4"><a href="files/pdf/tabela de CFOP.pdf" target="_blank">Tabela de CFOP</a></li>
+          <li class="conteudoPrincipal-cursos-link manual5"><a href="files/pdf/tutorial cadastro produtos.pdf" target="_blank">Cadastro de Produtos</a></li>
+          <li class="conteudoPrincipal-cursos-link video"><a href="files/videos/Venda rapida.mp4">Venda Rápida</a></li>
+          <li class="conteudoPrincipal-cursos-link video2"><a href="files/videos/Importação de XML.mp4">Entrada por XML </a></li>
+          <li class="conteudoPrincipal-cursos-link video3"><a href="files/videos/Baixar XML.mp4">Baixar XML</a></li>
+          <li class="conteudoPrincipal-cursos-link video4"><a href="files/videos/Cadastro de Produtos.mp4">Cadastro de Produtos</a></li>
 
         </ul>
       </nav>
     </div>
-
 
 
   </main>
