--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
           <li class="conteudoPrincipal-cursos-link manual3"><a href="files/pdf/Entrada por XML.pdf" target="_blank">Entrada por XML</a></li>
           <li class="conteudoPrincipal-cursos-link manual4"><a href="files/pdf/tabela de CFOP.pdf" target="_blank">Tabela de CFOP</a></li>
           <li class="conteudoPrincipal-cursos-link manual5"><a href="files/pdf/tutorial cadastro produtos.pdf" target="_blank">Cadastro de Produtos</a></li>
-          <li class="conteudoPrincipal-cursos-link video"><a href="files/videos/Venda rapida.mp4">Venda Rápida</a></li>
-          <li class="conteudoPrincipal-cursos-link video2"><a href="files/videos/Importação de XML.mp4">Entrada por XML </a></li>
-          <li class="conteudoPrincipal-cursos-link video3"><a href="files/videos/Baixar XML.mp4">Baixar XML</a></li>
-          <li class="conteudoPrincipal-cursos-link video4"><a href="files/videos/Cadastro de Produtos.mp4">Cadastro de Produtos</a></li>
+          <li class="conteudoPrincipal-cursos-link video"><a href="files/videos/Venda rapida.mp4" target="_blank">Venda Rápida</a></li>
+          <li class="conteudoPrincipal-cursos-link video2"><a href="files/videos/Importação de XML.mp4" target="_blank">Entrada por XML </a></li>
+          <li class="conteudoPrincipal-cursos-link video3"><a href="files/videos/Baixar XML.mp4" target="_blank">Baixar XML</a></li>
+          <li class="conteudoPrincipal-cursos-link video4"><a href="files/videos/Cadastro de Produtos.mp4" target="_blank">Cadastro de Produtos</a></li>
 
         </ul>
       </nav>
