--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
       <nav>
         <ul class="conteudoPrincipal-cursos">
           <li class="conteudoPrincipal-cursos-link instalador"><a href="https://download1512.mediafire.com/c3e506tzwumg/ffcznpbh1xtaen4/BitmaxInstall_Empresarial.rar" target="_blank">Instalador</a></li>
-          <li class="conteudoPrincipal-cursos-link update"><a href="https://www.mediafire.com/file/zb5inadvigyrblo/Atualiza%25C3%25A7%25C3%25A3o_Empresarial_19.05.2022.rar/file" target="_blank">Atualização 19.05.2022</a></li>
+          <li class="conteudoPrincipal-cursos-link update"><a href="https://www.mediafire.com/file/9nqg5xm2juhhcft/Atualiza%25C3%25A7%25C3%25A3o_Empresarial_19.05.2022.rar/file" target="_blank">Atualização 19.05.2022</a></li>
           <li class="conteudoPrincipal-cursos-link update2"><a href="javascript:alert('Nada por aqui')">Atualização Beta</a></li>
           <li class="conteudoPrincipal-cursos-link table"><a href="files/IBPT.sql" target="_blank">Tabela IBPT</a></li>
           <li class="conteudoPrincipal-cursos-link tools"><a href="files/exe/ibexpert.exe"target="_blank">IBExpert</a></li>
           <li class="conteudoPrincipal-cursos-link database"><a href="files/exe/Instalador_Firebird.exe" target="_blank">Firebird</a></li>
           <li class="conteudoPrincipal-cursos-link backup"><a href="files/Backup.rar" target="_blank">Rotina de Backup</a></li>
           <li class="conteudoPrincipal-cursos-link manual"><a href="files/pdf/Manual Bitmax.chm" target="_blank">Manual Completo</a></li>
-          <li class="conteudoPrincipal-cursos-link manual2"><a href="files/pdf/Venda rápida.pdf" target="_blank">Venda Rápida</a></li>
-          <li class="conteudoPrincipal-cursos-link manual3"><a href="files/pdf/Entrada por XML.pdf" target="_blank">Entrada por XML</a></li>
-          <li class="conteudoPrincipal-cursos-link manual4"><a href="files/pdf/tabela de CFOP.pdf" target="_blank">Tabela de CFOP</a></li>
-          <li class="conteudoPrincipal-cursos-link manual5"><a href="files/pdf/tutorial cadastro produtos.pdf" target="_blank">Cadastro de Produtos</a></li>
+          <li class="conteudoPrincipal-cursos-link manual2"><a href="files/pdf/Venda rápida.pdf" target="_blank">PDF Venda Rápida</a></li>
+          <li class="conteudoPrincipal-cursos-link manual3"><a href="files/pdf/Entrada por XML.pdf" target="_blank">PDF Entrada por XML</a></li>
+          <li class="conteudoPrincipal-cursos-link manual4"><a href="files/pdf/tabela de CFOP.pdf" target="_blank">PDF Tabela de CFOP</a></li>
+          <li class="conteudoPrincipal-cursos-link manual5"><a href="files/pdf/tutorial cadastro produtos.pdf" target="_blank">PDF Cadastro de Produtos</a></li>
           <li class="conteudoPrincipal-cursos-link video"><a href="files/videos/Venda rapida.mp4" target="_blank">Venda Rápida</a></li>
           <li class="conteudoPrincipal-cursos-link video2"><a href="files/videos/Importação de XML.mp4" target="_blank">Entrada por XML </a></li>
           <li class="conteudoPrincipal-cursos-link video3"><a href="files/videos/Baixar XML.mp4" target="_blank">Baixar XML</a></li>
