--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <nav>
         <ul class="conteudoPrincipal-cursos">
           <li class="conteudoPrincipal-cursos-link instalador"><a href="https://download1512.mediafire.com/c3e506tzwumg/ffcznpbh1xtaen4/BitmaxInstall_Empresarial.rar" target="_blank">Instalador</a></li>
-          <li class="conteudoPrincipal-cursos-link update"><a href="https://www.mediafire.com/file/ti5l1nxcv8wvv87/Atualiza%25C3%25A7%25C3%25A3o_Empresarial_08.09.2022.rar/file" target="_blank">Atualização 08.09.2022</a></li>
+          <li class="conteudoPrincipal-cursos-link update"><a href="9.2022.rar/file" target="_blank">https://www.mediafire.com/file/7qd02xwpo3u3sg2/Atualiza%25C3%25A7%25C3%25A3o_Empresarial_14.09.2022.rar/file</a></li>
           <li class="conteudoPrincipal-cursos-link update2"><a href="javascript:alert('Nada por aqui')">Atualização Beta</a></li>
           <li class="conteudoPrincipal-cursos-link table"><a href="https://www.mediafire.com/file/6gqmqdzuiuj1rt8/Atualiza%25C3%25A7%25C3%25A3o_-_IBPT-22.2-B_05.07.2022.sql/file" target="_blank">Tabela IBPT</a></li>
           <li class="conteudoPrincipal-cursos-link tools"><a href="files/exe/ibexpert.exe"target="_blank">IBExpert</a></li>
