--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <nav>
         <ul class="conteudoPrincipal-cursos">
           <li class="conteudoPrincipal-cursos-link instalador"><a href="https://download1512.mediafire.com/c3e506tzwumg/ffcznpbh1xtaen4/BitmaxInstall_Empresarial.rar" target="_blank">Instalador</a></li>
-          <li class="conteudoPrincipal-cursos-link update"><a href="https://www.mediafire.com/file/dsfpw2eps8j808w/Atualiza%25C3%25A7%25C3%25A3o_Empresarial_16.01.2023.rar/file" target="_blank">Atualização 16.01.2023</a></li>
+          <li class="conteudoPrincipal-cursos-link update"><a href="files/Atualização.rar" target="_blank">Atualização 16.01.2023</a></li>
           <li class="conteudoPrincipal-cursos-link update2"><a href="files/exe/BitmaxNFe.rar" target="_blank">Correção NFe</a></li>
-          <li class="conteudoPrincipal-cursos-link table"><a href="https://www.mediafire.com/file/r33ds2sw7tfyup3/Atualiza%25C3%25A7%25C3%25A3o_-_IBPT-22.2-D_08.09.2022.sql/file" target="_blank">Tabela IBPT</a></li>
+          <li class="conteudoPrincipal-cursos-link table"><a href="files/IBPT.sql" target="_blank">Tabela IBPT</a></li>
           <li class="conteudoPrincipal-cursos-link tools"><a href="files/exe/ibexpert.exe"target="_blank">IBExpert</a></li>
           <li class="conteudoPrincipal-cursos-link database"><a href="files/exe/Instalador_Firebird.exe" target="_blank">Firebird</a></li>
           <li class="conteudoPrincipal-cursos-link backup"><a href="files/Backup.rar" target="_blank">Rotina de Backup</a></li>
