--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <nav>
         <ul class="conteudoPrincipal-cursos">
-          <li class="conteudoPrincipal-cursos-link instalador"><a href="https://download1512.mediafire.com/c3e506tzwumg/ffcznpbh1xtaen4/BitmaxInstall_Empresarial.rar" target="_blank">Instalador</a></li>
+          <li class="conteudoPrincipal-cursos-link instalador"><a href="files/BitmaxInstall_Empresarial.rar" target="_blank">Instalador</a></li>
           <li class="conteudoPrincipal-cursos-link update"><a href="files/Atualização.rar" target="_blank">Atualização 16.01.2023</a></li>
           <li class="conteudoPrincipal-cursos-link update2"><a href="files/exe/BitmaxNFe.rar" target="_blank">Correção NFe</a></li>
           <li class="conteudoPrincipal-cursos-link table"><a href="files/IBPT.sql" target="_blank">Tabela IBPT</a></li>
