--- a/index.html
+++ b/index.html
@@ -1,65 +1,45 @@
-<!doctype html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Download</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/flexbox.css">
+  <meta charset="UTF-8">
+  <title>SITE EM MANUTENÇÃO</title>
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+  <style>
+    body{
+      font-family: 'Titillium Web', sans-serif;
+      color: #666666;
+      text-align: center;
+    }
+    .box{
+      background-color: #fff;
+      width: 500px;
+      margin: 50px auto;
+    }
+    #title {
+      font-size: 30px;
+      margin-top: 25px;
+    }
+    #descricao{
+      font-size:20px;
+      margin: 20px auto;
+    }
+    #logo {
+      margin-top: 25px;
+      max-width: 365px;
+      height: auto;
+    }
+    #logo-task {
+      width: 75px;
+    }
+  </style>
 </head>
-
 <body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js">
-  </script>
-  <script src="../js/index.js"></script>
-
-  <header class="cabecalhoPrincipal">
-    <div class="container">
-      <h1 class="cabecalhoPrincipal-titulo">
-        <a href="#">Ferramentas de Suporte</a>
-      </h1>
-
-  </header>
-
-  <main class="conteudoPrincipal">
-    <script>
-      function funcao1()
-      {
-      alert("Eu sou um alert!");
-      }
-      </script>
-    <div class="container">
-      <!-- <h2 class="subtitulo">Nossos cursos</h2> -->
-
-      <nav>
-        <ul class="conteudoPrincipal-cursos">
-          <li class="conteudoPrincipal-cursos-link instalador"><a href="files/BitmaxInstall_Empresarial.rar" target="_blank">Instalador</a></li>
-          <li class="conteudoPrincipal-cursos-link update"><a href="files/Atualizacao.rar" target="_blank">Atualização 16.01.2023</a></li>
-          <li class="conteudoPrincipal-cursos-link update2"><a href="files/exe/BitmaxNFe.rar" target="_blank">Correção NFe</a></li>
-          <li class="conteudoPrincipal-cursos-link table"><a href="files/IBPT.sql" target="_blank">Tabela IBPT</a></li>
-          <li class="conteudoPrincipal-cursos-link tools"><a href="files/exe/ibexpert.exe"target="_blank">IBExpert</a></li>
-          <li class="conteudoPrincipal-cursos-link database"><a href="files/exe/Instalador_Firebird.exe" target="_blank">Firebird</a></li>
-          <li class="conteudoPrincipal-cursos-link backup"><a href="files/Backup.rar" target="_blank">Rotina de Backup</a></li>
-          <li class="conteudoPrincipal-cursos-link manual"><a href="files/pdf/Manual Bitmax.chm" target="_blank">Manual Completo</a></li>
-          <li class="conteudoPrincipal-cursos-link manual2"><a href="files/pdf/Venda rápida.pdf" target="_blank">PDF Venda Rápida</a></li>
-          <li class="conteudoPrincipal-cursos-link manual3"><a href="files/pdf/Entrada por XML.pdf" target="_blank">PDF Entrada por XML</a></li>
-          <li class="conteudoPrincipal-cursos-link manual4"><a href="files/pdf/tabela de CFOP.pdf" target="_blank">PDF Tabela de CFOP</a></li>
-          <li class="conteudoPrincipal-cursos-link manual5"><a href="files/pdf/tutorial cadastro produtos.pdf" target="_blank">PDF Cadastro de Produtos</a></li>
-          <li class="conteudoPrincipal-cursos-link video"><a href="files/videos/Venda rapida.mp4" target="_blank">Venda Rápida</a></li>
-          <li class="conteudoPrincipal-cursos-link video2"><a href="files/videos/Importação de XML.mp4" target="_blank">Entrada por XML </a></li>
-          <li class="conteudoPrincipal-cursos-link video3"><a href="files/videos/Baixar XML.mp4" target="_blank">Baixar XML</a></li>
-          <li class="conteudoPrincipal-cursos-link video4"><a href="files/videos/Cadastro de Produtos.mp4" target="_blank">Cadastro de Produtos</a></li>
-
-        </ul>
-      </nav>
+  <div class="box">
+    <img src="https://static.wixstatic.com/media/d66770_e819f6719ce743f6b1b4829bb95a6df8~mv2.gif" id="logo">
+    <div id="title">
+      SITE EM MANUTENÇÃO
     </div>
-
-
-  </main>
-
-
+    
+    
+  </div>
 </body>
-
 </html>
