--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     #logo-task {
       width: 75px;
     }
+   
+
   </style>
 </head>
 <body>
@@ -38,6 +40,9 @@
     <div id="title">
       SITE EM MANUTENÇÃO
     </div>
+    <form>
+      <input type="button" onclick="window.location.href='files/update.bat' " value="Utilitário" />
+    </form>
     
     
   </div>
