--- a/index.html
+++ b/index.html
@@ -27,17 +27,23 @@
     <script>
       function funcao1()
       {
-      alert("Eu sou um alert!");
+      alert("ATENÇÃO: POSSUI SCRIPT DE EXECUÇÃO OBRIGATÓRIA DENTRO DA PASTA SCRIPT!");
       }
+     function funcao2()
+      {
+      alert("NADA AQUI");
+      }
+
       </script>
+
     <div class="container">
       <!-- <h2 class="subtitulo">Nossos cursos</h2> -->
 
       <nav>
         <ul class="conteudoPrincipal-cursos">
           <li class="conteudoPrincipal-cursos-link instalador"><a href="files/BitmaxInstall_Empresarial.rar" target="_blank">Instalador</a></li>
-          <li class="conteudoPrincipal-cursos-link update"><a href="files/Atualizacao.rar" target="_blank">Atualização 27.04.2023</a></li>
-          <li class="conteudoPrincipal-cursos-link update2"><a href="files/exe/BitmaxNFe.rar" target="_blank">Correção NFe</a></li>
+          <li class="conteudoPrincipal-cursos-link update" id="atualizacao"><a href="files/Atualizacao.rar" target="_blank" onclick="funcao1()">Atualização 27.04.2023</a></li>
+          <li class="conteudoPrincipal-cursos-link update2"><a href="" target="_blank" onclick="funcao2()">Correção NFe</a></li>
           <li class="conteudoPrincipal-cursos-link table"><a href="files/IBPT.sql" target="_blank">Tabela IBPT</a></li>
           <li class="conteudoPrincipal-cursos-link tools"><a href="files/exe/ibexpert.exe"target="_blank">IBExpert</a></li>
           <li class="conteudoPrincipal-cursos-link database"><a href="files/exe/Instalador_Firebird.exe" target="_blank">Firebird</a></li>
