--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <nav>
         <ul class="conteudoPrincipal-cursos">
           <li class="conteudoPrincipal-cursos-link instalador"><a href="files/BitmaxInstall_Empresarial.rar" target="_blank">Instalador</a></li>
-          <li class="conteudoPrincipal-cursos-link update" id="atualizacao"><a href="files/Atualizacao.rar" target="_blank" onclick="funcao1()">Atualização 12.07.2023</a></li>
+          <li class="conteudoPrincipal-cursos-link update" id="atualizacao"><a href="files/Atualizacao.rar" target="_blank" onclick="funcao1()">Atualização 18.07.2023</a></li>
           <li class="conteudoPrincipal-cursos-link update2"><a href="" target="_blank" onclick="funcao2()">Correção NFe</a></li>
           <li class="conteudoPrincipal-cursos-link table"><a href="files/IBPT.sql" target="_blank">Tabela IBPT</a></li>
           <li class="conteudoPrincipal-cursos-link tools"><a href="files/exe/ibexpert.exe"target="_blank">IBExpert</a></li>
@@ -58,6 +58,7 @@
           <li class="conteudoPrincipal-cursos-link video3"><a href="files/videos/Baixar XML.mp4" target="_blank">Baixar XML</a></li>
           <li class="conteudoPrincipal-cursos-link video4"><a href="files/videos/Cadastro de Produtos.mp4" target="_blank">Cadastro de Produtos</a></li>
           <li class="conteudoPrincipal-cursos-link bat"><a href="files/update.bat" target="_blank">Bat</a></li>
+          <li class="conteudoPrincipal-cursos-link backup2"><a href="files/exe/backup.exe" target="_blank">Backup Manual</a></li>
 
         </ul>
       </nav>
