--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Painel do Suporte</title>
+		<script src="./src/js/info.js"></script>
+
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,7 +44,7 @@
 				<li class="cartao-download">
 					<div class="informacoes">
 						<span>Atualização</span>
-						<span>05.04</span>
+						<span>09.04</span>
 					</div>
 
 					<img src="./src/imagens/atualizacao-do-sistema.png" alt="atualização" class="gif" />
