--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="#">
+			<a href="src/pages/changelog.html" target="_blank">
 				<img src="./src/imagens/ferramentas-de-reparacao.png" alt="pokebola" class="logo" />
 			</a>
 			<button id="botao-alterar-tema">
