--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<header>
 			<a href="src/pages/changelog.html" target="_blank">
-				<img src="./src/imagens/ferramentas-de-reparacao.png" alt="pokebola" class="logo" />
+				<img src="./src/imagens/rolagem.png" alt="pokebola" class="logo" />
 			</a>
 			<button id="botao-alterar-tema">
 				<img src="./src/imagens/sun.png" alt="imagem do sol" class="imagem-botao" />
@@ -44,7 +44,7 @@
 				<li class="cartao-download">
 					<div class="informacoes">
 						<span>Atualização</span>
-						<span>10.04</span>
+						<span>13.05</span>
 					</div>
 
 					<img src="./src/imagens/atualizacao-do-sistema.png" alt="atualização" class="gif" />
