Versão nova empresarial

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<li class="cartao-download">
 					<div class="informacoes">
 						<span>Atualização</span>
-						<span>13.05</span>
+						<span>19.05</span>
 					</div>
 
 					<img src="./src/imagens/atualizacao-do-sistema.png" alt="atualização" class="gif" />
@@ -109,7 +109,7 @@
 						<li class="tipo download"><a href="src/files/update.bat" target="_blank">Download</a></li>
 					</ul>
 
-					<p class="descricao">Instalador do Firebird.</p>
+					<p class="descricao">Atualizador bat.</p>
 				</li>
 
 				<li class="cartao-download">
