--- a/src/pages/changelog.html
+++ b/src/pages/changelog.html
@@ -52,7 +52,7 @@
         }
 
         // Chamar a função para ler o arquivo de texto
-        lerArquivoTexto('../../info.txt');
+        lerArquivoTexto('../../changelog.txt');
     </script>
 </body>
 </html>
