--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<li class="cartao-download">
 					<div class="informacoes">
 						<span>Atualização</span>
-						<span>29.07</span>
+						<span>09.08</span>
 					</div>
 
 					<img src="./src/imagens/atualizacao-do-sistema.png" alt="atualização" class="gif" />
@@ -53,7 +53,9 @@
 						<li class="tipo download"><a href="src/files/Atualizacao.rar" target="_blank">Download</a></li>
 					</ul>
 
-					<p class="descricao"><a href="src/files/Atualizacao_beta.rar" target="_blank">Baixe a beta aqui</a>.</p>
+					<p class="descricao">Versão 2408.1.</p>
+
+
 				</li>
 
 				<li class="cartao-download">
