--- a/src/pages/changelog.html
+++ b/src/pages/changelog.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../../src/css/estilos.css">
     <link rel="stylesheet" href="../../src/css/scrollbar.css">
 </head>
-<body>
+<body class="body-changelog">
     <header>
         <a href="#">
             <img src="../../src/imagens/ferramentas-de-reparacao.png" alt="pokebola" class="logo" />
