--- a/src/pages/faq.html
+++ b/src/pages/faq.html
@@ -96,13 +96,19 @@
 
         <ul class="faq-list" id="faqList">
             <li class="faq-item">
-                <h3>O que é o sistema X?</h3>
-                <p>O sistema X é uma plataforma que permite o gerenciamento de processos de forma eficiente e rápida.
-                    Veja abaixo uma ilustração do sistema X:
+                <h3>Como configurar o acesso TS?</h3>
+                <p>Primeiro faça o downdoad do Radmin.
+                    Depois de instalado crie uma rede na opção "Criar Rede", defina um nome da rede e uma senha, por exemplo: 
                     <br>
-                    <img src="../../src/imagens/teste.png" alt="Imagem do sistema X">
-                    Para saber mais, visite nosso site: 
-                    <a href="https://www.exemplo.com" class="faq-link">www.exemplo.com</a>
+                    <img src="../../src/imagens/faq/radmin/1.png" alt="Instalação radmin">
+                    <img src="../../src/imagens/faq/radmin/2.png" alt="Instação radmin">
+                    <a href="https://www.radmin-vpn.com/" class="faq-link">www.radmin-vpn.com</a>
+                    No computador terminal, instale o Radmin e entre na rede na opção "Entrar na rede" com os dados criado no servidor.
+                </p>
+                <p> : 
+                    <br>
+                    
+                
                 </p>
             </li>
             <li class="faq-item">
